--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -208,6 +208,13 @@
     </div>
   </div>
 </div>
+<!-- 
+  <script src="js/cryptoJS.js"></script>
+  	<script src="js/csrfToken.js"></script>
+	<script src="js/aesUtil.js"></script>
+	<script src="js/forge.js"></script>
+	<script src="js/HybridEncryption.js"></script>
+  	<script src="js/script.js"></script> -->
 
 </body>
 </html>
