--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -73,7 +73,7 @@
 
     
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script th:src="@{/JS/jquery.min.3.7.1.js}"></script>
     <script th:src="@{/JS/cryptoJS.js}"></script>
     <script th:src="@{/JS/code.js}"></script>
   	<script th:src="@{/JS/csrfToken.js}"></script>
