--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Gujarat Bhawan Management</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> -->
+
+   <link th:href="@{/CSS/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/CSS/swap.css}" rel="stylesheet">
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
