--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Gujarat Bhawan Management</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> -->
 
    <link th:href="@{/CSS/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/CSS/swap.css}" rel="stylesheet">
@@ -87,10 +85,14 @@
     <div class="col-md-10">
       <!-- Header -->
       <div class="header">
-        <div><strong>Hello Admin User 👋</strong></div>
+        <div><strong>Hello Admin User </strong></div>
         <div>
           <button class="btn btn-secondary btn-sm">Change Password</button>
-          <button class="btn btn-danger btn-sm">Logout</button>
+         
+      <form th:action="@{/logout}" method="post" style="display: inline;">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <button type="submit" class="btn btn-danger btn-sm">Logout</button>
+          </form> 
         </div>
       </div>
 
